finished building this  website

--- a/index.html
+++ b/index.html
@@ -4,8 +4,190 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+
+    <!-- LOCAL STYLES -->
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+
+    <!-- BANNER SECTION STARTS -->
+    <header class="banner">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="banner-message banner-box">
+                    <h1 class="banner-title">Let's make beautiful flowers a part of your life.</h1>
+                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                    <div class="banner-btn">
+                        <button class="btn-primary">
+                            Shop Now
+                        </button>
+                    </div>
+                </div>
+                <div class="banner-image banner-box">
+                    <img src="images/pngwing10.png" alt="Flower">
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- BANNER SECTION ENDS -->
+
+    <!-- FEATURE SECTION STARTS -->
+    <section class="feature text-center">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="feature-header section-header">
+                    <h2 class="section-title">Our Featured Flowers</h2>
+                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="feature-flower-card">
+                    <div class="feature-flower-card-image bg-pink">
+                        <img src="images/pngwing6.png" alt="">
+                    </div>
+                    <h5 class="feature-flower-card-title">Pink Flower Tree</h5>
+                </div>
+                <div class="feature-flower-card">
+                    <div class="feature-flower-card-image bg-lightblue">
+                        <img class="mb-50" src="images/pngwing5.png" alt="">
+                    </div>
+                    <h5 class="feature-flower-card-title">Pink Flower Tree</h5>
+                </div>
+                <div class="feature-flower-card">
+                    <div class="feature-flower-card-image bg-seagreen">
+                        <img src="images/pngwing7.png" alt="">
+                    </div>
+                    <h5 class="feature-flower-card-title">Pink Flower Tree</h5>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FEATURE SECTION ENDS -->
+
+    <!-- SERVICE SECTION STARTS -->
+    <section class="service text-center">
+        <div class="container service-bg">
+            <div class="service-info-container">
+                <div class="row justify-content-between">
+                    <div class="service-info">
+                        <div class="service-info-image">
+                            <img src="images/Group57.png" alt="">
+                        </div>
+                        <p class="service-info-title">Same Day Delivery. Click & Collect.</p>
+                    </div>
+                    <div class="service-info">
+                        <div class="service-info-image">
+                            <img src="images/Group58.png" alt="">
+                        </div>
+                        <p class="service-info-title">Fresh Flowers. Local Growers.</p>
+                    </div>
+                    <div class="service-info">
+                        <div class="service-info-image">
+                            <img src="images/Group59.png" alt="">
+                        </div>
+                        <p class="service-info-title">24/7 Free Support.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- SERVICE SECTION ENDS -->
+
+    <!-- DISCOUNT SECTION STARTS -->
+    <section class="discount">
+        <div class="discount-info-container">
+            <div class="row align-items-center justify-content-between">
+                <div class="discount-info">
+                    <div class="section-header">
+                        <h2 class="section-title">Hot Deal ! Sale Up To 25% <span class="discount-off">Off</span></h2>
+                        <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                        <div class="discount-btn">
+                            <button class="btn-primary">Sign Up</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="discount-info">
+                    <div class="discount-info-image">
+                        <img src="images/pngwing8.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- DISCOUNT SECTION ENDS -->
+
+    <!-- INSTAGRAM SECTION STARTS -->
+    <section class="instagram">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="instagram-header section-header">
+                    <h2 class="section-title">Instagram</h2>
+                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                </div>
+            </div>
+            <div class="row gap">
+                <div class="instagram-card">
+                    <div class="instagram-card-image">
+                        <img src="images/Flower01.png" alt="">
+                    </div>
+                </div>
+                <div class="instagram-card">
+                    <div class="instagram-card-image">
+                        <img src="images/Rectangle4.png" alt="">
+                    </div>
+                </div>
+                <div class="instagram-card">
+                    <div class="instagram-card-image">
+                        <img src="images/Rectangle5.png" alt="">
+                    </div>
+                </div>
+                <div class="instagram-card">
+                    <div class="instagram-card-image">
+                        <img src="images/Rectangle6.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- INSTAGRAM SECTION ENDS -->
+
+    <!-- LATEST SECTION STARTS -->
+    <section class="latest text-center">
+        <div class="container">
+            <div class="latest-bg-image">
+                <div class="row justify-content-center">
+                    <div class="latest-header section-header">
+                        <h2 class="section-title">Get The Latest Deals</h2>
+                        <p class="section-description">Get The Latest Deals</p>
+                    </div>
+                </div>
+                <div class="latest-sub text-center">
+                    <input type="email" placeholder="Enter your email here....">
+                    <input type="submit" value="Subscribe" class="btn-primary">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- LATEST SECTION ENDS -->
+
+    <!-- FOOTER SECTION STARTS -->
+    <footer class="footer text-center">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="footer-card">
+                    <h1 class="footer-logo">Flower<span>Shop</span></h1>
+                    <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p class="footer-rights">&copy;2020-2023, FlowerShop.com. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER SECTION ENDS -->
+
 </body>
 </html>
