added a new section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap" rel="stylesheet">
 
+    <!-- FONT AWESOME LINK -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- LOCAL STYLES -->
     <link rel="stylesheet" href="styles/style.css">
 </head>
@@ -120,6 +123,49 @@
         </div>
     </section>
     <!-- DISCOUNT SECTION ENDS -->
+
+    <!-- BIRTHDAY SECTION STARTS -->
+    <section class="birthday text-center">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="birthday-header section-header">
+                    <h2 class="section-title">Birthday Flowers</h2>
+                </div>
+                <div class="row align-items-center position-relative">
+                    <div class="birthday-card-arrow left">
+                        <i class="fa-solid fa-chevron-left"></i>
+                    </div>
+                    <div class="birthday-card">
+                        <div class="birthday-card-image">
+                            <img src="images/birthday2.png" alt="">
+                        </div>
+                    </div>
+                    <div class="birthday-card">
+                        <div class="birthday-card-image">
+                            <img src="images/birthday3.png" alt="">
+                        </div>
+                    </div>
+                    <div class="birthday-card">
+                        <div class="birthday-card-image">
+                            <img src="images/birthday4.png" alt="">
+                        </div>
+                    </div>
+                    <div class="birthday-card">
+                        <div class="birthday-card-image">
+                            <img src="images/birthday5.png" alt="">
+                        </div>
+                    </div>
+                    <div class="birthday-card-arrow right">
+                        <i class="fa-solid fa-chevron-right"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="birthday-btn">
+                <button class="btn-primary">Shop All</button>
+            </div>
+        </div>
+    </section>
+    <!-- BIRTHDAY SECTION ENDS -->
 
     <!-- INSTAGRAM SECTION STARTS -->
     <section class="instagram">
